--- a/src/components/common/Footer/style.css
+++ b/src/components/common/Footer/style.css
@@ -1,8 +1,8 @@
 .footer {
 	background: #38404a;
-	padding: 5px;
-	position: fixed;
-	bottom:  0;
+	/* padding: 5px; */
+	/* position: fixed; */
+	/* bottom:  0; */
     width: 100%;
 	z-index: 1000;
 }
