--- a/src/components/common/Header/style.css
+++ b/src/components/common/Header/style.css
@@ -1,8 +1,8 @@
 .header {
 	background: rgba(255, 255, 255, 0.644);
-	padding: 5px;
-	position: fixed;
-	top: 0;
+	/* padding: 5px; */
+	/* position: fixed;
+	top: 0; */
 	width: 100%;
 	z-index: 1000;
 }
